@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.i486.rpm 3629107 BLAKE2B 9ae2e49a5d9d03b7986a182c39b24a13b1c0883ad2879a69b073018fc1979936bbe51df78dc3dc5cc72cacb4d881dded0324185edc2b80ca5549d188ac1e1d12 SHA512 15c00a73107ff2295f230d055db483c67b0f793284fc885bf78a645e71bfc4abd3630554b5d60b18e803f11b4b2ec2c1546e419253523906f34490cb446df65d
-DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.x86_64.rpm 3628457 BLAKE2B 24b7455d77f2142a66bb129511586289d8360d7f3a489aabd3d3d9fe0d7ce177785738c41f27318ef39508cb642a871b50f961edef72a6a37df252c923d90a36 SHA512 c5ff0b4b52dd2f13424fc26d90ec25bd73312dd03407d19fea861841e99dfa6fe212aeb86a3aa1531b4f17eb2ce2aa80019b5fdfbabcd732c4824022d81d9570
 DIST epson-inkjet-printer-escpr2-1.1.57-1lsb3.2.i486.rpm 3634810 BLAKE2B 708264c5ef5ef1f1cd2e49223688849379ad81f7fae2303c7e050c0793abe47f27a975afb09fae9f221e20484f0f094e41ff6c2f03d37e65003e4a863b0b58dc SHA512 29ce841bc5e6684fbc9115e7542b9436de3276604a1f51a6bb8d59388b872d90c90ef5bdb79a9ce47df2067cd22e3dbe3537583d64be1c91ac47548a5912257d
 DIST epson-inkjet-printer-escpr2-1.1.57-1lsb3.2.x86_64.rpm 3634203 BLAKE2B a9aad62acb799e5184ace2be76f4a9d65c321d1834381c3311707d8ea743f9ba4972d28f72c8aac67cad80746ec496e49d0582f51351be461618f27e9bdd4d2b SHA512 50839e54a7e0a9146914d05e90e5eb2a687baa7d10213657053aaff08bbb0c7416105036b429999ad30193c815f80cb51d69af59ae7f2c3a8611eac28f398e6f
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.56.ebuild 1670 BLAKE2B c92a47e469f00780f0b2419c0c013edaf52b9a2b2c2c73aa735f0f72c8b1b8f7145f3a8a2baba7f02f148efeb9c8f083987903254a85e4fc7c9216fb59044d33 SHA512 4045ef902c4ab06a62ed434049b93455f07c5c97e90c41cc1dacff747d6399b66ca3d39785389785310946e13c9f3221fb373d4bf97185f34dff0ad13615dc0a
+DIST epson-inkjet-printer-escpr2-1.1.58-1lsb3.2.i486.rpm 3664807 BLAKE2B b45b71b46bc2b14340ac263c9f849ac310dc3547a7400b396ba7d0be30f96fc67613ad873ee3361b5b6d30614db46af3ada01ad04b0e5511e3749421e9afd79f SHA512 601873a1f485c4cbf4c9d69f22fc58815fb1abc1fbc653880e69395462060a6ef1545bf3d14d3c0f4494c718c28321f34f4141e8c1f0f43760fb7ea1bd2a5764
+DIST epson-inkjet-printer-escpr2-1.1.58-1lsb3.2.x86_64.rpm 3664212 BLAKE2B 4ccfc2132757516052566a97f60ba4cf0e90e8c9f9751dcb26bdc403df9ea14ba6f4d28edc00e91c3d06cdc822a614a43d1c896d30765927b1f6e4533c3d8566 SHA512 21372e2ae104108d0f4c54bb916118e4a82d3667224f85772912991fb19df58e712e70ee43c40cdb9d300435b7be1ee6b4629c5331a3f48039cdebde192b3a1a
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.57-r1.ebuild 1670 BLAKE2B 72001dc68e903bab6e3eece7b5a63be14b38afa1fc45cec4ab2e49069995c40b270a23b1ca630fc0bd84f864543cb5bdd1392a86379e54a69787c38bea60ccd9 SHA512 1e79951c5f738e47bf326a13f12ff709152c607d5b0473939b13bd569cd3228fd9b68f060ae178b9a077d379c9b56d38030b7013fd6e294e96895a0a70103738
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.58.ebuild 1670 BLAKE2B 7343a120ebe0e726c8eb1cc260b5eec66c616a1e0c6054875bca06ff4fd018250261410e134970f020bc25543725d24bdb23e5244c50a0febe43ecdcab017ef2 SHA512 9f4aaac65b08d4aa6905e16cb47cfdf6fe6c381aedd9124b618f0d41a3a1253c060613cc63aac9837f7d5d3b37bd7115c49f28a9f7ac730ba3bfb2124ebb08c3
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
