@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.56.tar.gz 4977194 BLAKE2B 54ca706c86350de036aae53f6ced211fdcc16443a0d5acaf7df1af16afa62b90ff5055a2bcbb598feef002b686fcb72cca3eb7819bf484fcc22dd693dac94f9a SHA512 68502f8142650ead0c7d224a00a7afc75f83c5ee323716bec9c45bb271dc756fe49afd0f38b15bbcc2a13745cb788358f7dfc5572d6e554c16798ce82d979203
 DIST epson-inkjet-printer-escpr2-1.1.57.tar.gz 4996535 BLAKE2B 9ca725e5e5d15511cd018ff52fa1a50922bf0e8412e527e1f1288d861c509797e4a74ee1386853a702eeaaee1bca8666af356860eb9688c097298f27f7ba8d46 SHA512 827fafdf53e2ed1e0f9cdf585a67e0d9152d638055a9b2738ee73654f68bf0af617e3471534dec5f2e462fddb7ef0b20e30c8a679a9de031b379e05bfac06fbc
-EBUILD epson-inkjet-printer-escpr2-1.1.56.ebuild 1319 BLAKE2B b54dc49a695752318a6d8a72d0bd6b522d08caa71424e828cad13b64a2f7ee4c95d04fe497d9f952ad1d4650a655b76908f1fc18eb1df00c6eb01510446b50a1 SHA512 3ecf5afbc1673cd96cc7df9ba806ad8845e3d72eb041aa900b79025e06c3786ecdacebf877249021db88cc91ae2bc23d7830c5b339ccf18ce4d6989aaf6b245d
+DIST epson-inkjet-printer-escpr2-1.1.58.tar.gz 5013891 BLAKE2B cf0ad8bf8f428241544f1a6405091cf6076e1f37ec572c96b64f3139c14f2abb61c7c26b39a3f3a336b737a3ebf1057439690f14e0021b231fe1baa5944f2446 SHA512 5a266c68a5564e0fcf0d387f5e24e2f91faa51981fb911b63c18fc363599855e7edcfa38b5851423bda2f554990048633bee053df238035e6b56883ffa691507
 EBUILD epson-inkjet-printer-escpr2-1.1.57-r1.ebuild 1319 BLAKE2B bea557a461416ecab1c1cda71628fdb8666182e5b4a47430a2266271ac7853a83c7044b604450b147a01c601d8cd9b7a953337d0fabe0eff55c8e3d7059b092e SHA512 8e3b913855fe22c7f8b9b72cce1673481d3cbbe49f101cca2bddd457e9f4cf7cbbac2b49408d12a3af10b8f89980a312a975f55251fd9c4737d16887cda75e2a
+EBUILD epson-inkjet-printer-escpr2-1.1.58.ebuild 1319 BLAKE2B d52cf6adc74c3fc421bb2e1c5abb30461c2094e60fa95032b019766dc2e107f91cbafecdd67f65e3ab44c38e19067a7a753b12a0e2bdc8d8fce09896e921364d SHA512 6845a18a20a61883fbfcf9e3f0bc9ccf81b229c503f8404a573ed4669774d8c5ecc36b93cf9f4b3ae61342c0644c246da1d08f0481e828d77ba8a4312f350f28
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
